# price-negative-comparison

./: .env.example  .gitignore  API_README.md  ARCHITECTURE.md  LICENSE  README.md  STRUCTURE.md  app.py  cli_analyzer.py  csv_format_detector_fallback.py  csv_format_module.py  flask_api.py  main.py  production_loader.py  pyproject.toml  requirements.txt  start.sh  test_ai_integration.py  test_api_client.py  test_negative_sample.csv  test_sample.csv  test_with_negative_prices.csv
cli/: __init__.py  cli_analyzer.py  main.py
core/: price_analyzer.py  price_fetcher.py
data/: email_logs.txt
data/samples/: Produktion - Viktor v2 NO headers.xlsx  Produktion - Viktor v2 mixed column NO headers.xlsx  Produktion - Viktor v2 more headers.xlsx  Produktion - Viktor v2.xlsx  Produktion - Viktor.xlsx
docs/: API_README.md  CHARTS_IMPLEMENTATION.md  SECURITY.md  UPLOAD_IMPLEMENTATION.md
static/css/: custom.css  terminal.css
static/js/: main.js
templates/: index.html  results.html  results_backup.html  status.html  upload.html
tests/: __init__.py
utils/: __init__.py  ai_explainer.py  ai_file_analyzer.py  csv_format_detector_fallback.py
